// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCompVanilla should pass source value 1`] = `
<Image
  accessibilityLabel="image"
  accessibilityRole="image"
  source="foo"
/>
`;

exports[`ImageCompVanilla should render correctly 1`] = `
<Image
  accessibilityLabel="image"
  accessibilityRole="image"
  source={
    Object {
      "uri": "",
    }
  }
/>
`;
